# alsa-utils

./: .gitignore  .hgignore  .hgtags  .travis.yml  CHANGELOG  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.conf  Makefile.conf.in  README  README.md  TODO  acconfig.h  acinclude.m4  build64-linaro.sh  config.cache  config.status  configure  configure.ac  configure.in  cvscompile  gitcompile  hgcompile  missing  mkinstalldirs  version
.github/workflows/: build.yml  coverity.yml
alsa-info/: Makefile.am  alsa-info.sh
alsaconf/: Makefile.am  alsaconf.8  alsaconf.in
alsaconf/po/: Makefile.in  eu.po  ja.po  ka.po  ko.po  ru.po
alsactl/: .gitignore  90-alsa-restore.rules.in  Makefile  Makefile.am  alsa-restore.service.in  alsa-state.service.in  alsa-store.service.in  alsactl.1  alsactl.c  alsactl.h  alsactl_init.xml  alsactl_lexer.l  alsactl_parser.y  boot_params.c  clean.c  daemon.c  export.c  info.c  init_parse.c  init_sysdeps.c  init_sysfs.c  init_ucm.c  init_utils_string.c  lock.c  merge.c  monitor.c  names.c  power.c  setup.c  state.c  utils.c  wait.c
alsactl/conf/: 90-alsa-restore.rules.in  alsa-card-wait@.service.in  alsa-restore.service.in  alsa-state.service.in
alsactl/init/: 00main  Makefile.am  ca0106  default  hda  help  test
alsaloop/: Makefile.am  alsaloop.1  alsaloop.c  alsaloop.h  control.c  effect-sweep.c  pcmjob.c  test.sh
alsamixer/: Makefile  Makefile.am  README  alsamixer.1  alsamixer.c  alsamixer.cust.rc  alsamixer.rc  alsamixer.rc.example  alsamixer_abramo.c  alsamixer_tim.c  bindings.c  bindings.h  card_select.c  cli.c  colors.c  colors.h  configparser.c  configparser.h  curskey.c  curskey.h  device_name.c  go  mainloop.c  mainloop.h  mem.c  menu_widget.c  menu_widget.h  mixer_clickable.c  mixer_clickable.h  mixer_controls.c  mixer_display.c  mixer_widget.c  mixer_widget.h  mkdoc.py  proc_files.c  textbox.c  utils.c  utils.h  volume_mapping.c  widget.c  (+1 more)
alsaucm/: 89-alsa-ucm.rules.in  Makefile.am  alsaucm.rst  dump.c  go.sh  usecase.c  usecase.h
amidi/: Makefile.am  amidi.1  amidi.c
amixer/: Makefile  Makefile.am  README.first  amain.cpp  amixer  amixer.1  amixer.c  amixer.cpp  amixer.h  atypes.h  go  volume_mapping.c  volume_mapping.h
aplay/: Makefile  Makefile.am  aplay  aplay.1  aplay.c  formats.h
axfer/: Makefile.am  axfer-list.1  axfer-transfer.1  axfer.1  container-au.c  container-raw.c  container-riff-wave.c  container-voc.c  container.c  container.h  frame-cache.c  frame-cache.h  main.c  mapper-multiple.c  mapper-single.c  mapper.c  mapper.h  misc.h  subcmd-list.c  subcmd-transfer.c  subcmd.h  waiter-epoll.c  waiter-poll.c  waiter-select.c  waiter.c  waiter.h  xfer-libasound-irq-mmap.c  xfer-libasound-irq-rw.c  xfer-libasound-timer-mmap.c  xfer-libasound.c  xfer-libasound.h  xfer-libffado.c  xfer-options.c  xfer.c  xfer.h
axfer/test/: Makefile.am  container-test.c  generator.c  generator.h  mapper-test.c  run-test-in-tmpdir.sh
bat/: Makefile.am  alsa.c  alsabat-test.sh  alsabat.1  analyze.c  bat-signal.h  bat.1  bat.c  common.c  common.h  convert.c  convert.h  latencytest.c  signal.c  tinyalsa.c
bat/tests/: Makefile.am  README  alsabat_main.sh  analog_audio_playback_and_capture.sh  dp_audio_playback.sh  dp_audio_subdevice_number.sh  hdmi_audio_playback.sh  hdmi_audio_subdevice_number.sh  map_test_case
bat/tests/asound_state/: Makefile.am  asound.state.Broadwell  asound.state.Haswell  asound.state.Skylake
gamix/: ChangeLog  Makefile  Makefile.am  Makefile.in  README  catch.c  conf_w.c  gamix.h  main.c  mkmixer.c  probe.c
iecset/: Makefile.am  iecbits.c  iecset.1  iecset.c
include/: Makefile.am  aconfig.h.in  config.h  config.h.in  gettext.h  os_compat.h
m4/: ChangeLog  Makefile.am
nhlt/: Makefile.am  nhlt-dmic-info.1  nhlt-dmic-info.c
po/: LINGUAS  Makevars  POTFILES.in  de.po  eu.po  fr.po  ja.po  ka.po  ko.po  nl.po  sk.po
seq/: Makefile.am
seq/aconnect/: Makefile.am  aconnect.1  aconnect.c
seq/aplaymidi/: Makefile.am  aplaymidi.1  aplaymidi.c  arecordmidi.1  arecordmidi.c
seq/aplaymidi2/: Makefile.am  aplaymidi2.1  aplaymidi2.c  arecordmidi2.1  arecordmidi2.c
seq/aseqdump/: aseqdump.1  aseqdump.c
seq/aseqnet/: Makefile.am  README.aseqnet  aseqnet.1  aseqnet.c
seq/aseqsend/: Makefile.am  aseqsend.1  aseqsend.c
speaker-test/: Makefile.am  pink.c  readme.txt  speaker-test.1  speaker-test.c  st2095.c  st2095.h
speaker-test/samples/: Makefile.am
topology/: Makefile.am  alsatplg.rst  pre-process-class.c  pre-process-dai.c  pre-process-dapm.c  pre-process-external.h  pre-process-object.c  pre-processor.c  pre-processor.h  topology.c  topology.h
topology/nhlt/: Makefile.am  nhlt-processor.c  nhlt.h
topology/nhlt/intel/: dmic-nhlt.c  dmic-nhlt.h  intel-nhlt.c  intel-nhlt.h  ssp-nhlt.c  ssp-nhlt.h
topology/nhlt/intel/dmic/: dmic-debug.c  dmic-debug.h  dmic-intel.h  dmic-internal.h  dmic-process.c  dmic-process.h  pdm-decim-fir.h
topology/nhlt/intel/ssp/: ssp-debug.c  ssp-debug.h  ssp-intel.h  ssp-internal.h  ssp-process.c  ssp-process.h
utils/: Makefile  alsa-utils.spec  alsa-utils.spec.in  buildrpm
xamixer2/: COPYING  Makefile.am  callbacks.c  callbacks.h  cinit.c  cinit.h  config.c  config.h  configure.in  display.c  display.h  main.h  structs.h  test.c  test1.c  util.c  util.h  xamixer.home  xamixer2.c  xamixer2.h
