bin_PROGRAMS = xamixer2
xamixer2_SOURCES = main.h structs.h xamixer2.c xamixer2.h callbacks.c callbacks.h cinit.c cinit.h display.c display.h util.c util.h config.c config.h switches.c switches.h options.c options.h
xamixer2_LDFLAGS = $(GTK_LIBS)
sysconf_DATA = xamixer.conf
EXTRA_DIST = README COPYING INSTALL AUTHORS NEWS TODO  xamixer.home xamixer.conf
