TESTS = \
	container-test  \
	mapper-test

check_PROGRAMS = \
	container-test \
	mapper-test

container_test_SOURCES = \
	../container.h \
	../container.c \
	../container-riff-wave.c \
	../container-au.c \
	../container-voc.c \
	../container-raw.c \
	generator.c \
	generator.h \
	container-test.c

mapper_test_SOURCES = \
	../container.h \
	../container.c \
	../container-riff-wave.c \
	../container-au.c \
	../container-voc.c \
	../container-raw.c \
	../mapper.h \
	../mapper.c \
	../mapper-single.c \
	../mapper-multiple.c \
	generator.c \
	generator.h \
	mapper-test.c
